# llama-hub

./: .gitignore  CHANGELOG.md  Makefile  README.md  jjjjjjjjjjjjjj  llama_packs_neo4j.ipynb  loader_hub  pyproject.toml  rag_moderator_llama_guard_pack.ipynb  setup.py  test.py  test_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  publish_release.yaml  tests.yml
llama_hub/: README.md  add_loader.sh  library.json  schema.py  utils.py
llama_hub/agent_search/: README.md  __init__.py  base.py
llama_hub/airbyte_cdk/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_gong/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_hubspot/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_pokeapi/: README.md  __init__.py  base.py  config.py  poc.py  requirements.txt  spec.json
llama_hub/airbyte_salesforce/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_shopify/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_stripe/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_typeform/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airbyte_zendesk_support/: README.md  __init__.py  base.py  requirements.txt
llama_hub/airtable/: README.md  __init__.py  base.py
llama_hub/arango_db/: README.md  __init__.py  base.py  requirements.txt
llama_hub/asana/: README.md  __init__.py  base.py
llama_hub/assemblyai/: README.md  __init__.py  base.py  requirements.txt
llama_hub/astra_db/: README.md  __init__.py  base.py
llama_hub/athena/: README.md  __init__.py  base.py  requirements.txt
llama_hub/azcognitive_search/: README.md  __init__.py  base.py
llama_hub/azstorage_blob/: README.md  __init__.py  base.py
llama_hub/bagel/: README.md  __init__.py  base.py  requirements.txt
llama_hub/bilibili/: README.md  __init__.py  base.py  requirements.txt
llama_hub/bitbucket/: README.md  __init__.py  base.py  requirements.txt
llama_hub/boarddocs/: BoardDocsReader.ipynb  README.md  __init__.py  base.py  crawl.ipynb
llama_hub/chatgpt_plugin/: README.md  __init__.py  base.py
llama_hub/chroma/: README.md  __init__.py  base.py
llama_hub/confluence/: README.md  __init__.py  base.py  (+1 more)
loader_hub/: README.md  __init__.py  base.py  library.json  schema.py
tests/: test_download  test_file.py  test_github_reader.py  test_library.py  test_string_iterable.py
(+1316 files in other folders)
