[tool.poetry]
name = "llama-hub"
version = "0.0.14"
description = "A library of community-driven data loaders for LLMs. Use with LlamaIndex and/or LangChain. "
authors = ["Jerry Liu", "Jesse Zhang"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://llamahub.ai"
repository = "https://github.com/emptycrown/llama-hub"
keywords = ["llama-index", "llama-hub", "llama"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# Updated Python version
python = ">=3.8.1,<4.0"
llama-index = ">=0.6.9"
atlassian-python-api = "*"
html2text = "*"
psutil = "*"
retrying = "*"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-dotenv = "0.5.2"
pytest_httpserver = "1.0.8"
typing-inspect = "0.8.0"
typing_extensions = "4.5.0"
types-requests = "2.28.11.8"
black = "22.12.0"
isort = "5.11.4"


[build-system]
requires = ["poetry>=0.12", "poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"