[tool.poetry]
name = "llama-hub"
version = "0.0.57"
description = "A library of community-driven data loaders for LLMs. Use with LlamaIndex and/or LangChain. "
authors = ["Jerry Liu", "Jesse Zhang"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://llamahub.ai"
repository = "https://github.com/emptycrown/llama-hub"
keywords = ["llama-index", "llama-hub", "llama"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# Updated Python version
python = ">=3.8.1,<3.12"
llama-index = ">=0.9.8"
html2text = "*"
psutil = "*"
retrying = "*"
pyaml = "^23.9.7"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-dotenv = "0.5.2"
pytest_httpserver = "1.0.8"
pytest-mock = "3.11.1"
typing-inspect = "0.8.0"
typing_extensions = "^4.5.0"
types-requests = "2.28.11.8"
black = "22.12.0"
isort = "5.11.4"
pytest-asyncio = "^0.21.1"
ruff = "0.0.285"

[build-system]
requires = ["poetry>=0.12", "poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ["notebooks", "build", "examples"]

[tool.ruff]
# Allow lines to be as long as 200 characters.
# TODO: it should be removed, but we need to fix the entire code first.
line-length = 200
exclude = [
    ".venv",
    "__pycache__",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    "examples",
    "notebooks",
    ".git"
]

[tool.ruff.per-file-ignores]
"base.py" = ["E402", "F811", "E501"]
